# TrapYourPhish

./: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.python  README.md  docker-compose.yaml  requirements.txt  setupClientSimpleGmail.md
Backend/: .gitignore  Cargo.toml  Dockerfile  README.md  default.json  init.sql
Backend/assets/_internals/: db.json
Backend/assets/css/: 404.css  auth.css  base.css  history.css  home.css  predict.css
Backend/assets/js/: history.js  login.js  predict.js  register.js
Backend/config/: default.json
Backend/html/404/: index.html  redirect.html
Backend/html/auth/: login.html  register.html
Backend/html/home/: index.html
Backend/html/inject/: head.html  header.html
Backend/html/mail/: history.html  predict.html
Backend/html/mail/files/: mail.html
Backend/src/: lib.rs  main.rs
Backend/src/api/: init.rs  mod.rs  mods.rs
Backend/src/api/mods/: auth.rs  predict.rs
Backend/src/assets/: init.rs
Backend/src/helper/: cookie.rs  database.rs  find_insert.rs  functions.rs  mod.rs  start.rs  trace.rs
Backend/src/web/: dispatch.rs  init.rs  mod.rs  routes.rs
Backend/src/web/routes/: auth.rs  home.rs  mail.rs  predict.rs  user.rs
Backend/utils/: ascii.art  types.json
Email/: read_emails_imap.py
ML/: README.md  check-mail.py  predict.py
code/: background.css  history.css  history.html  index.html  interface.py  login.css  login.html  main.css  main.html
datasets/: README.md  make_dataset.py
models/: encoder.pkl  ml_text_email.pkl  opti_svm_mail.pkl  opti_tfidf_mail.pkl  text-vectoriser.pkl
(+79 files in other folders)
