[package]
name = "web_website"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-web = "4.5.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = "1.7.0"
regex = "1.10.3"
comrak = "0.24.1"
rand = "0.8"
chrono = "0.4"
mysql = { version = "25.0.1" }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19.0"
futures = "0.3.30"